fix: 🐛 change backgroud color of connect modal in dark mode

--- a/src/app/common/components/connect-modal/connect-modal.scss
+++ b/src/app/common/components/connect-modal/connect-modal.scss
@@ -65,3 +65,13 @@
   height: 40px;
   margin-right: 10px;
 }
+
+.list-md .item-lines-full {
+  --border-color: var(--mercury);
+  --background: white;
+}
+
+.list-ios .item-lines-full {
+  --border-color: var(--mercury);
+  --background: white;
+}
